# arxiv-slack-bot

./: README.md  pyproject.toml
src/: arxiv_client.py  embedding_service.py  main.py
